[package]
name = "posy"
version = "0.1.0"
authors = ["Nathaniel J. Smith <njs@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
pep440 = "0.1.1"
ureq = { version = "2.1.1", features = ["json", "rustls-native-certs", "cookies", "charset"] }
zip = "0.5.13"
serde_json = "1.0.64"
url = { version = "2.2.2", features = ["serde"] }
peg = "0.7.0"
# We just use regex for validating metadata formats, which are
# ascii-only (and in fact supporting unicode would probably be a bug).
# So disable the unicode feature to avoid pulling in the big unicode
# tables and make sure we're not accidentally using them.
#
# We could potentially drop 'perf' too? idk
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
derivative = "2.2.0"
serde_with = "1.9.2"
once_cell = "1.7.2"
directories = "3.0.2"
serde_cbor = "0.11.1"
structopt = "0.3.21"
data-encoding = "2.3.2"
pubgrub = "0.2.0"
indoc = "1.0.3"
tempfile = "3.2.0"
ring = "0.16.20"
log = "0.4.14"
serde_bytes = "0.11.5"
html5ever = "0.25.1"
encoding_rs_io = "0.1.7"
string_cache = "0.8.1"
encoding_rs = "0.8.28"

[patch.crates-io]
# Required until https://github.com/relrod/pep440-rs/pull/3 is merged+released
pep440 = { git = "https://github.com/njsmith/pep440-rs", branch = "fix-comparisons" }

[dev-dependencies]
fastrand = "1.4.1"
tokio = { version = "1.7.0", features = ["rt-multi-thread", "sync"] }
warp = "0.3.1"
