[package]
name = "posy"
version = "0.0.1"
authors = ["Nathaniel J. Smith <njs@pobox.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/njsmith/posy"
description = "[wip] Python installer and package manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
pep440 = "0.2.0"
ureq = { version = "2.6.2", features = ["json", "rustls-native-certs", "cookies", "charset"] }
zip = "0.6.3"
serde_json = "1.0.91"
url = { version = "2.3.1", features = ["serde"] }
peg = "0.8.1"
# We just use regex for validating metadata formats, which are
# ascii-only (and in fact supporting unicode would probably be a bug).
# So disable the unicode feature to avoid pulling in the big unicode
# tables and make sure we're not accidentally using them.
#
# We could potentially drop 'perf' too? idk
regex = { version = "1.7.1", default-features = false, features = ["std", "perf"] }
derivative = "2.2.0"
serde_with = "2.2.0"
once_cell = "1.17.0"
directories = "4.0.1"
data-encoding = "2.3.3"
pubgrub = "0.2.1"
indoc = "1.0.8"
tempfile = "3.3.0"
ring = "0.16.20"
log = "0.4.17"
serde_bytes = "0.11.8"
html5ever = "0.26.0"
encoding_rs_io = "0.1.7"
string_cache = "0.8.4"
encoding_rs = "0.8.31"
shrinkwraprs = "0.3.0"
fs2 = "0.4.3"
elsa = { version = "1.7.0", features = ["indexmap"] }
indexmap = "1.9.2"
http-cache-semantics = "1.0.1"
http = "0.2.8"
http-serde = "1.1.2"
slice = "0.0.4"
mime = "0.3.16"
ciborium = "0.2.0"
stable_deref_trait = "1.2.0"
typed-path = "0.2.1"
auto_impl = "1.0.1"
tar = "0.4.38"
flate2 = { version = "1.0.25", default-features = false, features = ["zlib-ng"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-log = "0.1.3"
clap = { version = "4.1.3", features = ["derive", "wrap_help", "unicode"] }
concolor-clap = "0.0.13"
console = "0.15.5"
indenter = "0.3.3"
thiserror = "1.0.38"
toml_edit = { version = "0.17.1", features = ["serde"] }
backtrace = "0.3.67"
eyre = "0.6.8"

[dev-dependencies]
fastrand = "1.8.0"
insta = { version = "1.26.0", features = ["ron", "redactions"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "sync"] }
warp = "0.3.3"

# As suggested at:
# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
